# voc_parse

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
AnkiVocabularyParser/: Exporter.py  OCR.py  Parser.py  SpellChecker.py  __main__.py
anki_voc_parser/: Exporter.py  OCR.py  Parser.py  main.py
output/: img_res.json
